# gst-playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
gst-app/: CMakeLists.txt  main.c
gst-plugin/: CMakeLists.txt  config.h.in  gstfakefilter.c  gstfakefilter.h  gstfakevideofilter.c  gstfakevideofilter.h  gstplugin.c
